09/10 @06:51pm: Created boilerplate
09/11 @02:30am: Added writing and reading from a file
