@@ -1,3 +1,5 @@
 09/10 @06:51pm: Created boilerplate
 09/11 @02:30am: Added writing and reading from a file
+09/11 @12:34pm: Added commandline arguments support and fopen(3) error checking
+09/11 @01:30pm: Fixed a tricky bug where memset() was not 0'ing out the entire array space; pyrite was not connecting rooms consistently due to corrupted memory space
 
